# plato

./: README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
frontend/: .env.example  package-lock.json
frontend/app/: _layout.tsx  hello.tsx
frontend/app/(tabs)/: _layout.tsx  chat.tsx  home.tsx  index.tsx
frontend/constants/: api.ts
