[project]
name = "plato-backend"
version = "0.1.0"
description = "Starter FastAPI backend for a swipe-based restaurant recommender"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Plato Team" }]
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn[standard]>=0.35.0",
  "pydantic-settings>=2.10.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
  "httpx>=0.28.1",
  "ruff>=0.12.12",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
